--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
     name: Build Apk
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
-        - uses: actions/setup-java@v1
-          - with:
-              - swift-version: '5.7.0'
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        swift-version: '5.7.0'
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '3.3.9'
