--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,22 +5,13 @@ on:
 name: Continous Delivery Release apk
 jobs:
   build:
-    name: Build Apk
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        swift-version: '5.7.0'
-      - uses: subosito/flutter-action@v1
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.3.9'
+          channel: 'stable'
+          architecture: x64
       - run: flutter pub get
-      - run: flutter build apk -t lib/main.dart --split-per-abi
-      - name: Release apk
-      - uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/release/*.apk"
-          token: ${{secrets.TOKEN}}
-
-
+      - run: flutter test
+      - run: flutter build ios --release --no-codesign
